--- a/DRPyton1.ipynb
+++ b/DRPyton1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVewzLjgd1fM3w1clNZpUe",
+      "authorship_tag": "ABX9TyOTG2Qmvdr0hnm9HK2duRWf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
         "time.sleep(t)\n",
         "print('Цикл создан!\\n')\n",
         "time.sleep(t)\n",
-        "print(name, 'позволь представить тебе\\n', sep = \", \")\n",
+        "print(name, 'позволь представить тебе:\\n', sep = \", \")\n",
         "time.sleep(t)\n",
         "print('ТА! ДА! М!\\n')\n",
         "time.sleep(t)\n",
@@ -83,16 +83,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "4a0d58e2-b904-4aa2-8adb-cd11e1c38bb4"
+        "outputId": "c1edfe19-037e-472e-a958-34fe142f995c"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Здравствуйте, представьтесь пожалуйста: л\n",
-            "л, cейчас мы с вами создадим таблицу умножения\n",
+            "Здравствуйте, представьтесь пожалуйста: Вася\n",
+            "Вася, cейчас мы с вами создадим таблицу умножения\n",
             "\n",
             "Для начала давайте подключим нужную библиотеку\n",
             "pd - подключенно\n",
@@ -100,7 +100,7 @@
             "Далее создадим переменную и присвоем ей значение типа ДатаФрейм\n",
             "переменная tabl - создана\n",
             "\n",
-            "л, не отвлекаемся, т.к. сейчас будет...\n",
+            "Вася, не отвлекаемся, т.к. сейчас будет...\n",
             "....будет...\n",
             "....вот-вот уже....\n",
             "...будет создан цикл со вложением!\n",
@@ -108,7 +108,7 @@
             "Во как!\n",
             "Цикл создан!\n",
             "\n",
-            "л, позволь представить тебе\n",
+            "Вася, позволь представить тебе:\n",
             "\n",
             "ТА! ДА! М!\n",
             "\n"
@@ -164,7 +164,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-71f17583-abef-40a7-931b-1ed01e40a1eb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-18c9d06b-369a-45c3-8993-eddf01a83218\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -672,7 +672,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71f17583-abef-40a7-931b-1ed01e40a1eb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-18c9d06b-369a-45c3-8993-eddf01a83218')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -724,12 +724,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-71f17583-abef-40a7-931b-1ed01e40a1eb button.colab-df-convert');\n",
+              "        document.querySelector('#df-18c9d06b-369a-45c3-8993-eddf01a83218 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-71f17583-abef-40a7-931b-1ed01e40a1eb');\n",
+              "        const element = document.querySelector('#df-18c9d06b-369a-45c3-8993-eddf01a83218');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -749,8 +749,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ed09bb91-a1b6-4a15-9a0d-aeb66dacbed0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ed09bb91-a1b6-4a15-9a0d-aeb66dacbed0')\"\n",
+              "<div id=\"df-580afaf0-40b2-4601-86dd-22661b1b8e6a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-580afaf0-40b2-4601-86dd-22661b1b8e6a')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -801,7 +801,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ed09bb91-a1b6-4a15-9a0d-aeb66dacbed0 button');\n",
+              "        document.querySelector('#df-580afaf0-40b2-4601-86dd-22661b1b8e6a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -812,7 +812,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 40
         }
       ]
     }
