Создано с помощью Colaboratory

--- a/DRPyton1.ipynb
+++ b/DRPyton1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcZME7EBhYszeHWeewuvvl",
+      "authorship_tag": "ABX9TyOtTRHmkpma/wabkE4N58WK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,13 @@
         "import pandas as pd\n",
         "time.sleep(t)\n",
         "print('pd - подключенно\\n')\n",
-        "# создаём переменную и присавиваем ей тип ДатаФрейм\n",
+        "# позволяем пользователю выбрать длину таблицы\n",
+        "l=(1+int(input('Теперь нужно выбрать длину таблицы. Укажите пожалуйста целое число: ')))\n",
         "time.sleep(t)\n",
+        "# создаём переменную и присавиваем ей тип ДатаФрейм\n",
         "print('Далее создадим переменную и присвоем ей значение типа ДатаФрейм')\n",
         "tabl = pd.DataFrame()\n",
+        "time.sleep(t)\n",
         "print('переменная tabl - создана\\n')\n",
         "time.sleep(t)\n",
         "print(name, 'не отвлекаемся, т.к. сейчас будет...', sep=', ')\n",
@@ -61,14 +64,14 @@
         "time.sleep(t)\n",
         "print('Во как!')\n",
         "# создаём цикл + вложенный цикл\n",
-        "for i in range(1,21):\n",
-        "    for j in range(1,21):\n",
+        "for i in range(1,l):\n",
+        "    for j in range(1,l):\n",
         "      x=int(i*j)\n",
         "      tabl.loc[i,j]=x\n",
         "time.sleep(t)\n",
         "print('Цикл создан!\\n')\n",
         "time.sleep(t)\n",
-        "print(name, 'позволь представить тебе:\\n', sep = \", \")\n",
+        "print(name, 'позвольте представить вам:\\n', sep = \", \")\n",
         "time.sleep(t)\n",
         "print('ТА! ДА! М!\\n')\n",
         "time.sleep(t)\n",
@@ -86,13 +89,21 @@
     {
       "cell_type": "code",
       "source": [
+        "#выводим элемент по его индексу\n",
         "print('Красота!\\n')\n",
-        "print(name, 'давай выведем на экран конкретный элемент нашей таблицы\\n', sep = \", \")\n",
+        "print(name, 'давайте выведем на экран конкретный элемент нашей таблицы\\n', sep = \", \")\n",
         "time.sleep(t)\n",
-        "x=int(input('выбери номер столбца: '))\n",
-        "y=int(input('выбери номер строки: '))\n",
+        "r=l-1\n",
+        "print('Внимание!\\n')\n",
         "time.sleep(t)\n",
-        "tabl.loc[x,y]"
+        "print('Наша таблица имеет размер', r, 'столбцов на ', r, ' строк')\n",
+        "time.sleep(t)\n",
+        "x=int(input('выберите номер столбца (введя целое число в указанных выше границах): ',))\n",
+        "y=int(input('выберите номер строки (введя целое число в указанных выше границах): '))\n",
+        "time.sleep(t)\n",
+        "print(name,'приготовьтесь\\n', sep = \", \")\n",
+        "time.sleep(t)\n",
+        "print('Искомый вами элемент равен ',tabl.loc[x,y])"
       ],
       "metadata": {
         "id": "1pqWv4F9rGkA"
